--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/jazzy/rqt_gui
-	previous = 
-	base = 8ec4b15a
+	previous = 8ec4b15a
+	base = 400756e1
 	trim = 
 	trimbase = 
