--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/jazzy/rqt
-	previous = 
-	base = 488be106
+	previous = 488be106
+	base = 41bcf90c
 	trim = 
 	trimbase = 
