--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/jazzy/rqt_gui_py
-	previous = 
-	base = 16e81f6b
+	previous = 16e81f6b
+	base = 9adae4a9
 	trim = 
 	trimbase = 
