--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/jazzy/rqt_py_common
-	previous = 
-	base = 853e894f
+	previous = 853e894f
+	base = 60ea8f6e
 	trim = 
 	trimbase = 
