--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/jazzy/rqt_gui_cpp
-	previous = 
-	base = 3f141c4f
+	previous = 3f141c4f
+	base = 45f69563
 	trim = 
 	trimbase = 
