--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a0988d00
-	base = 53c38954
+	base = 1bdb3741
 	trim = rqt
-	trimbase = 
+	trimbase = 53c38954
