--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a0988d00
-	base = 5ea1d73b
+	base = ad3abb1b
 	trim = rqt_gui
-	trimbase = 
+	trimbase = 5ea1d73b
