--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a0988d00
-	base = 3166679d
+	base = 82b2f72c
 	trim = rqt_gui_cpp
-	trimbase = 
+	trimbase = 3166679d
