--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a0988d00
-	base = baa7034a
+	base = 593d909e
 	trim = rqt_gui_py
-	trimbase = 
+	trimbase = baa7034a
