--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a0988d00
-	base = a3b31634
+	base = db97ba6a
 	trim = rqt_py_common
-	trimbase = 
+	trimbase = a3b31634
